# Haskell-Course-2026

./: .gitignore  README.md  cabal.project  hie.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: package.cache  ui-layout-lang-0.1.0.0-inplace.conf
homeworks/hw1/: Homework01.md  Solution.hs
homeworks/hw2/: Homework02.md  Solution.hs
homeworks/hw3/: Homework03.md  Solution.hs
homeworks/hw4/: Homework04.md  Solution.hs
project/: README.md  ui-layout-lang.cabal
project/app/: Main.hs
project/examples/: column.ui  dashboard.ui  overflow.ui  sidebar.ui
project/src/: UiLayoutLang.hs
project/src/UiLayoutLang/: Layout.hs  Parser.hs  RenderSvg.hs  Types.hs
project/test/: Spec.hs
